# code-ontology-mcp

./: .gitignore  CURRENT_FEATURES.md  Current.md  HANDOFF.md  README.md  ROADMAP.md  enhancements.md  improvements.md  pyproject.toml  sh.pub
.session/: worklog.json
ontology_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ontology_mcp/: __init__.py  __main__.py  config.py  git_clone.py  git_utils.py  model.py  neo4j_reader.py  neo4j_writer.py  parser.py  scanner.py  server.py  setup_env.py  sqlite_store.py  ts_parser.py  visualize.py
src/ontology_mcp/tools/: __init__.py  add_location.py  architecture_overview.py  blast_radius.py  bridge_nodes.py  build_from_url.py  build_python_code_ontology.py  circular_dependencies.py  communities.py  context_tools.py  context_window_pack.py  detect_changes.py  flows.py  hub_nodes.py  knowledge_gaps.py  large_functions.py  query_graph.py  resolve_symbol.py  similar_implementations.py  traverse.py  vulnerability_surface.py
tests/: test_dry_run.py  test_neo4j.py  test_smoke.py
