[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology-mcp"
version = "0.1.0"
description = "FastMCP server for Python code ontology generation in Neo4j"
requires-python = ">=3.9"
dependencies = [
  "fastmcp>=2.0.0",
  "neo4j>=5.20.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ontology-mcp-server = "ontology_mcp.server:main"
