[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology-mcp"
version = "0.1.0"
description = "FastMCP server for multi-language code ontology generation"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "tree-sitter-language-pack>=0.3.0",
  "networkx>=3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ontology-mcp-server = "ontology_mcp.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
